# mydnetlib

./: LICENSE  README.md
include/TransportLayer/Socket/: ASocket.hpp  ISocket.hpp  TCPSocket.hpp  UDPSocket.hpp
src/TransportLayer/Socket/: ASocket.cpp  TCPSocket.cpp  UDPSocket.cpp
src/TrasnportLayer/Socket/: ASocket.cpp
src/TrasnportLayer/Trasnport/: ISocket.hpp
test/: .gitignore  CMakeLists.txt  Makefile  TransportLayer.cpp  build.sh  main.cpp  mingw-w64-toolchain.cmake
test/include/: test.hpp
test/src/: TCPSocketTest.cpp  UDPTest.cpp
